# github-events-analyser

./: .coveragerc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py
docs/: conf.py  index.rst
src/github_events_analyser/: __init__.py  cli.py  github_api.py  skeleton.py
tests/: conftest.py  github_api_test.py  test_skeleton.py  test_unit_github_api.py
