[metadata]
name = github-events-analyser
description = Analyze GitHub user and repository events from the command line
author = ZakYeo
author_email = zakyeomanson@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/ZakYeo/github-events-analyser
project_urls =
    Documentation = https://github.com/ZakYeo/github-events-analyser
    Source = https://github.com/ZakYeo/github-events-analyser
platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata; python_version<"3.8"
    requests

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    github_events = github_events_analyser.cli:main

[tool:pytest]
addopts =
    --cov github_events_analyser --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.5
package = github_events_analyser
